# Tape

./: CMakeLists.txt  README.md  config.txt
files/: output  sample  sample.txt  sample.txt_formatted
files/tmp/: sample_formatted2  sample_formattedtmp4  sample_formattedtmp8
include/: config_parser.h  tape.h  tape_sorter.h
src/: main.cpp  tape.cpp  tape_sorter.cpp
tests/: config.txt  test.cpp
tests/files/: haotic_writing_result_formatted  random_test  random_test_sorted
tests/files/tmp/: random_test_formatted  random_test_formattedtmp10  random_test_formattedtmp11  random_test_formattedtmp12  random_test_formattedtmp13  random_test_formattedtmp14  random_test_formattedtmp15  random_test_formattedtmp16  random_test_formattedtmp17  random_test_formattedtmp18  random_test_formattedtmp19  random_test_formattedtmp2  random_test_formattedtmp20  random_test_formattedtmp21  random_test_formattedtmp22  random_test_formattedtmp23  random_test_formattedtmp24  random_test_formattedtmp25  random_test_formattedtmp26  random_test_formattedtmp27  random_test_formattedtmp28  random_test_formattedtmp29  random_test_formattedtmp3  random_test_formattedtmp30  random_test_formattedtmp31  random_test_formattedtmp32  random_test_formattedtmp33  random_test_formattedtmp34  random_test_formattedtmp35  random_test_formattedtmp36  random_test_formattedtmp37  random_test_formattedtmp38  random_test_formattedtmp39  random_test_formattedtmp4  random_test_formattedtmp5  random_test_formattedtmp6  random_test_formattedtmp7  random_test_formattedtmp8  random_test_formattedtmp9  (+6 more)
